# brn-nanochat

./: Cargo.toml  README.md
crates/bpetok/: Cargo.toml  README.md
crates/bpetok/examples/tokenizer_trainer/: Cargo.toml  README.md
crates/bpetok/examples/tokenizer_trainer/src/: main.rs
crates/bpetok/src/: builder.rs  data.rs  decoder.rs  lib.rs  merge_job.rs  pair_index.rs  regex_pool.rs  split.rs  token_types.rs  tokenizer.rs  types.rs  validators.rs  word.rs  word_count.rs
crates/bpetok/src/decoder/: byte_decoder.rs  context.rs  corpus.rs  corpus_decoder.rs  dict.rs  dictionary_decoder.rs  expansion_decoder.rs  graph.rs  mod.rs  pair_decoder.rs  parallel_decoder.rs  token_decoder.rs
crates/bpetok/src/decoders/: byte_decoder.rs  decode_context.rs  dictionary_decoder.rs  mod.rs  pair_decoder.rs  parallel_decoder.rs  token_decoder.rs
crates/bpetok/src/encoders/: mod.rs  parallel_encoder.rs  token_encoder.rs  unified_encoder.rs
crates/bpetok/src/tokenizer/: chunkpair.rs  cps_encoder.rs  cps_tokenizer.rs  mod.rs  scanning_encoder.rs  unified_encoder.rs
crates/bpetok/src/training/: mod.rs  pair_index.rs  trainer.rs  word_count.rs
crates/bpetok/src/util/: mod.rs
crates/bpetok/src/util/regex/: mod.rs  regex_pool.rs  regex_wrapper.rs
crates/bpetok/src/vocab/: data.rs  mod.rs  pair_vocab.rs  tiktoken_io.rs  unified_vocab.rs  word_vocab.rs
crates/bpetok/src/vocab/data/: bpe_map.rs  mod.rs  pair_vocab.rs  unified.rs  unified_vocab.rs  word_map.rs  word_vocab.rs
crates/bpetok/src/vocab/training/: mod.rs  pair_index.rs  tiktoken_io.rs  trainer.rs  word_count.rs
crates/llm-dataloader/: Cargo.toml
crates/llm-dataloader/examples/dl-test/: Cargo.toml
crates/llm-dataloader/examples/dl-test/src/: main.rs
crates/llm-dataloader/src/: cursor.rs  lib.rs  loader.rs  reader.rs
crates/llm-dataloader/src/loader/: mod.rs  token_batch.rs  token_batch_dataloader.rs  token_batch_iterator.rs
crates/llm-dataloader/src/support/: mod.rs  parquet.rs
crates/llm-dataloader/src/support/arrow/: mod.rs  parquet_shards.rs  rebatcher.rs
crates/module-tree/: Cargo.toml
crates/module-tree/src/: api_examples.rs  builder.rs  burn_enc.rs  constants.rs  error.rs  lib.rs  module_tree.rs  mtree.rs  tensor_kind_desc.rs  tensor_param_desc.rs  tree_impl.rs  type_util.rs  visitor_builder.rs  xee_util.rs  xot_util.rs
crates/module-tree/src/burn_ext/: mod.rs  param_desc.rs  shapes.rs  tensor_desc.rs
crates/module-tree/src/implementation/: mod.rs  module_tree_builder.rs  visitor_builder.rs
crates/module-tree/src/module_tree/: builder.rs  mod.rs  mtree.rs
crates/module-tree/src/module_util/: builder.rs  kinds.rs  mtree.rs
crates/module-tree/src/module_visitors/: mod.rs  module_tree_builder.rs
crates/module-tree/src/modules/: mod.rs  param_desc.rs
crates/module-tree/src/optimizers/: group_optimizer.rs
crates/module-tree/src/param_map/: builder.rs  mod.rs  param_desc.rs  param_map_impl.rs  param_path.rs  param_tag.rs
crates/module-tree/src/shadow_tree/: builder.rs  tree_impl.rs  type_util.rs
crates/module-tree/src/tensors/: tensor_desc.rs
crates/module-tree/src/xml_support/: xee_util.rs
crates/module-tree/src/xtree/: builder.rs  mod.rs  scratch.rs  tree_impl.rs
crates/module-tree/src/zspace/: mod.rs
crates/nanochat/: Cargo.toml
crates/nanochat/src/: lib.rs
crates/nanochat/src/burn_ext/: attention.rs  mod.rs  norm.rs  tensor.rs
crates/nanochat/src/gpt/: block.rs  csa.rs  gpt_model.rs  mlp.rs  mod.rs
crates/nanochat/src/model/: block.rs  csa.rs  gpt.rs  kvcache.rs  mod.rs
crates/pull/: Cargo.toml  README.md
crates/pull/src/: dataset.rs  main.rs  slice_parser.rs
crates/textok/: Cargo.toml  README.md
crates/textok/examples/tokenizer_trainer/: Cargo.toml
crates/textok/src/: types.rs
crates/textok/src/encoders/: parallel_encoder.rs  text_segmentor.rs  unified_encoder.rs
crates/textok/src/training/: word.rs
crates/textok/src/vocab/: word_vocab.rs
crates/wordchuck/: Cargo.toml  README.md
crates/wordchuck/examples/token-cli/: Cargo.toml
crates/wordchuck/examples/tokenizer_trainer/: Cargo.toml  README.md
crates/wordchuck/src/: lib.rs  types.rs
crates/wordchuck/src/decoders/: byte_decoder.rs  decode_context.rs  dictionary_decoder.rs  mod.rs  pair_decoder.rs  parallel_decoder.rs  rayon_decoder.rs  token_decoder.rs
crates/wordchuck/src/encoders/: bp_merge.rs  merge_heap_encoder.rs  mod.rs  parallel_encoder.rs  rayon_encoder.rs  text_segmentor.rs  token_encoder.rs  unified_encoder.rs
crates/wordchuck/src/rayon/: mod.rs  rayon_decoder.rs  rayon_encoder.rs
crates/wordchuck/src/regex/: alt_list.rs  exact_match_union.rs  mod.rs  re_pool.rs  re_supplier.rs  regex_pool.rs  regex_supplier.rs  regex_wrapper.rs
crates/wordchuck/src/segmentation/: mod.rs  segmentation_config.rs  text_segmentor.rs
crates/wordchuck/src/training/: bpe_trainer.rs  mod.rs  pair_index.rs  pair_span_index.rs  text_span_counter.rs  token_span_buffer.rs  trainer.rs  word_count.rs
crates/wordchuck/src/util/: map_type.rs  mod.rs  validators.rs
crates/wordchuck/src/vocab/: byte_span_vocab.rs  byte_table.rs  byte_vocab.rs  common_stats.rs  mod.rs  pair_vocab.rs  span_vocab.rs  special_vocab.rs  token_vocab.rs  unified_vocab.rs  vocab_index.rs  word_vocab.rs
crates/zsl-chat/: Cargo.toml
crates/zsl-chat-data/: Cargo.toml
crates/zsl-chat-data/examples/dl-test/: Cargo.toml
crates/zsl-chat-data/src/: dataloader.rs  lib.rs
crates/zsl-chat-data/src/arrow/: mod.rs  parquet.rs  select_columns.rs
crates/zsl-chat-data/src/iterators/: counting_iter.rs  iter_watcher.rs  mod.rs  shuffle_iter.rs
crates/zsl-chat-data/src/tokens/: dense_blocks.rs  mod.rs  tokenize_adapter.rs
crates/zsl-chat/src/: lib.rs
crates/zsl-chat/src/burn_ext/: slice_util.rs
crates/zsl-chat/src/gpt/: block.rs  gpt_model.rs  mlp.rs
crates/zsl-chat/src/module_util/: mod.rs  module_tree.rs  param_map.rs
crates/zsl-chat/src/optimizers/: group_optimizer.rs  mod.rs
crates/zsl-data-cache/examples/pull_shards/: Cargo.toml
examples/train/: Cargo.toml  README.md
examples/train/src/: main.rs
(+91 files in other folders)
