[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "crates/*/examples/*",
]

[workspace.package]
version = "0.0.1"
repository = "https://github.com/crutcher/brn-nanochat"
rust-version = "1.90.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "warn"

[workspace.dependencies]
burn = "0.20.0-pre.6"
bimm-contracts = "^0.19.1"

tracing = "^0.1"
log = "^0.4"
clap = "^4.5"
anyhow = "^1.0"
shellexpand = "^3.1"

num-traits = "0.2.19"
compact_str = "^0.9"
ahash = "^0.8"
dary_heap = "^0.3"

rayon = "^1.11"

serde = "^1.0"

downloader = "^0.2"

tempdir = "^0.3"

parquet = "^57.1"
arrow = "^57.1"

fancy-regex = "^0.17"

