[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*",
    "crates/*/examples/*",
]

[workspace.package]
version = "0.0.8"
repository = "https://github.com/crutcher/brn-nanochat"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "deny"


[workspace.dependencies]
burn = "^0.20.0"
bimm-contracts = "^0.19.2"

tracing = "^0.1"
log = "^0.4"
clap = "^4.5"
anyhow = "^1.0"
shellexpand = "^3.1"

num-traits = {  version = "^0.2.19", default-features = false }
compact_str = "^0.9"
ahash = "^0.8"
dary_heap = "^0.3"
stackvec = "^0.2.1"
edit-distance = "^2.2"
similar = "^2.7.0"

parking_lot = "^0.12.5"

rayon = "^1.11"

base64 = {  version = "^0.22.1" }
serde = "^1.0"

downloader = "^0.2"

tempdir = "^0.3"

parquet = "^57.1"
arrow = "^57.1"

regex = "^1.12"
fancy-regex = "^0.17"

