[workspace]
# Require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/*", "examples/train",
    "crates/*/examples/*",
]

[workspace.package]
version = "0.0.9"
repository = "https://github.com/crutcher/brn-nanochat"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"


[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
double_must_use = "allow"
doc_markdown = "deny"


[workspace.dependencies]
derive-new = "0.7.0"

wordchipper = { version = "0.9.0" }
wordchipper-cli-util = { version = "0.9.0" }

ahash = "0.8"
arrow = "58.1.0"
parquet = "58.1.0"
bimm-contracts = "0.19.2"
burn = "0.20.1"
clap = "4.5"
dary_heap = "0.3"
downloader = "0.2"
shellexpand = "3.1"
tempdir = "0.3"

anyhow = { version = "1.0", default-features = false }
log = { version = "0.4", default-features = false }

