[package]
name = "bpetok"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["rayon"]
rayon = ["dep:rayon"]

[dependencies]
anyhow = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }

rayon = { workspace = true, optional = true }

fancy-regex = { workspace = true }

num-traits = { workspace = true }
ahash = { workspace = true }
dary_heap = { workspace = true }
regex = "1.12.2"

[dev-dependencies]
compact_str = { workspace = true }
