[package]
name = "llm-dataloader"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive-new = { workspace = true }
wordchipper = { workspace = true, features = ["client"] }
parquet = { workspace = true, features = ["arrow"] }
arrow = { workspace = true }

[lints]
workspace = true
