[package]
name = "llm-dataloader"
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
burn = { workspace = true, features = ["train"] }
rand = { workspace = true }
derive-new = { workspace = true }
wordchipper = { workspace = true, features = ["client"] }
parquet = { workspace = true, features = ["arrow"] }
arrow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
