[package]
name = "nanochat"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
burn = { workspace = true }
bimm-contracts = { workspace = true }

[dev-dependencies]
burn = { workspace = true, features = ["wgpu"] }

[lints]
workspace = true
