[package]
name = "nanochat"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
burn = { workspace = true }
bimm-contracts = { workspace = true, features = ["burn"] }

anyhow = { workspace = true, features = ["std"]}

[dev-dependencies]
burn = { workspace = true, features = ["wgpu"] }

[lints]
workspace = true
