[package]
name = "pull"
version.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
burn = { workspace = true, features = ["network"] }
nanochat = { path = "../nanochat" }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
shellexpand = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }