[package]
name = "textok"
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
tracing = ["dep:tracing"]

[dependencies]
anyhow = { workspace = true }

log = { workspace = true }
tracing = { workspace = true, optional = true }

rayon = { workspace = true, optional = true }

base64 = { workspace = true }
serde = { workspace = true, features = ["derive"] }

regex = { workspace = true }
fancy-regex = { workspace = true }

num-traits = { workspace = true }
ahash = { workspace = true, features = ["serde"] }
dary_heap = { workspace = true }

[dev-dependencies]
compact_str = { workspace = true }
