[package]
name = "wordchuck"
description = "LLM Tokenizer Library"
repository.workspace = true
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true


[features]
default = ["rayon"]

# This is only partial support for no_std.
# It *is* tested by CI, but it isn't propagated to the dependents of this crate;
# and some of those will require feature degradation.
std = []

training = ["std", "compact_str", "dary_heap"]

rayon = ["dep:rayon", "std"]
tracing = ["dep:tracing"]

# We can switch HashMap/HashSet implementations for the whole crate.
# This is done in the "src/types.rs" file.
#
# "ahash" is here as an example of how to do this;
# but in my testing it provides only a small improvement
# to decode, and actually degrades encode.
ahash = ["dep:ahash", "std"]


[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
fancy-regex = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }

# "ahash" feature deps:
ahash = { workspace = true, optional = true }

# "tracing" feature deps:
tracing = { workspace = true, optional = true }

# "rayon" feature deps:
rayon = { workspace = true, optional = true }

# "training" feature deps:
compact_str = { workspace = true, optional = true }
dary_heap = { workspace = true, optional = true }


[dev-dependencies]
compact_str = { workspace = true }
tempdir = { workspace = true }
