[package]
name = "wordchuck"
description = "LLM Tokenizer Library"
repository.workspace = true
version.workspace = true
license.workspace = true

edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true


[features]
default = ["std", "ahash", "rayon"]

# This is only partial support for no_std.
# It *is* tested by CI, but it isn't propagated to the dependents of this crate;
# and some of those will require feature degradation.
std = [
    "anyhow/std",
    "dep:base64",
    "dep:parking_lot",
    "num-traits/std",
    "log/std",
]

training = [
    "compact_str",
    "dary_heap",
    "std",
]

rayon = [
    "dep:rayon",
    "std"
]

tracing = [
    "tracing/attributes",
]

# We can switch HashMap/HashSet implementations for the whole crate.
# This is done in the "src/types.rs" file.
#
# - mac hardware: fasster to enable ahash
# - 2020 desktop linux: faster decode, no encode benefit.
ahash = [
    "dep:ahash",
    "std",
]


[dependencies]
fancy-regex = { workspace = true }
regex = { workspace = true }

# no-default deps
anyhow = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }

# "std" feature deps:
base64 = { workspace = true, optional = true }
parking_lot = { workspace = true, optional = true }

# "ahash" feature deps:
ahash = { workspace = true, optional = true }

# "tracing" feature deps:
tracing = { workspace = true, optional = true }

# "rayon" feature deps:
rayon = { workspace = true, optional = true }

# "training" feature deps:
compact_str = { workspace = true, optional = true }
dary_heap = { workspace = true, optional = true }


[dev-dependencies]
compact_str = { workspace = true }
tempdir = { workspace = true }
