[package]
name = "zsl-chat"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
burn = { workspace = true }
bunsen = { workspace = true }
bimm-contracts = { workspace = true, features = ["burn"] }

hashbrown = { workspace = true }
anyhow = { workspace = true, features = ["std"] }

[dev-dependencies]
burn = { workspace = true, features = ["wgpu"] }

[lints]
workspace = true
