[package]
name = "zsl-chat"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
burn = { workspace = true }
bunsen = { workspace = true }
bimm-contracts = { workspace = true, features = ["burn"] }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }
indextree = { workspace = true }
debug-ignore = { workspace = true }

hashbrown = { workspace = true }
anyhow = { workspace = true, features = ["std"] }

[dev-dependencies]
burn = { workspace = true, features = ["wgpu"] }

[lints]
workspace = true
