[package]
name = "train"
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zsl-chat = { path = "../../crates/zsl-chat" }
zsl-data-cache = { path = "../../crates/zsl-data-cache" }
llm-dataloader = { path = "../../crates/llm-dataloader" }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
wordchipper = { workspace = true, features = ["client"] }
wordchipper-cli-util = { workspace = true }
burn = { workspace = true, features = ["train", "autotune", "fusion"] }

[features]
default = ["cuda"]
cuda = ["burn/cuda"]


[lints]
workspace = true
