[package]
name = "train"
rust-version.workspace = true
edition.workspace = true
publish = false

[dependencies]
zsl-chat = { path = "../../crates/zsl-chat" }
zsl-data-cache = { path = "../../crates/zsl-data-cache" }
zsl-chat-data = { path = "../../crates/zsl-chat-data" }

rand = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
wordchipper = { workspace = true, features = ["client"] }
wordchipper-cli-util = { workspace = true }
burn = { workspace = true, features = ["train", "fusion", "autotune"] }

[features]
default = ["cuda"]
cuda = ["burn/cuda"]


[lints]
workspace = true
