[package]
name = "dl-test"
rust-version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
zsl-data-cache = { path = "../../../zsl-data-cache" }
llm-dataloader = { path = "../.." }

burn = { workspace = true }
wordchipper = { workspace = true, features = ["client"] }
wordchipper-cli-util = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

humansize = { workspace = true }