[package]
name = "tokenizer_trainer"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
burn = { workspace = true }
clap = { workspace = true, features = ["derive"] }
nanochat-data = { path = "../../../nanochat-data" }
similar = { workspace = true }
wordchuck = { path = "../..", features = ["rayon", "training"] }
