[package]
name = "pull_shards"
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
zsl-data-cache = { path = "../.." }

burn = { workspace = true, features = ["network"] }

clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }

